[2021.08.15]AdmybrandFriendFinder[Added validation to the request handlers]
